<resources>
    <string name="app_name">Network Speed Indicator</string>
    <string name="enable_float_window">开启悬浮窗</string>
    <string name="disable_float_window">关闭悬浮窗</string>
    <string name="lock_position">锁定位置</string>
    <string name="unlock_position">解锁位置</string>
    <string name="low_speed_hide">低速隐藏</string>
    <string name="speed_format">网速格式</string>
    <string name="speed_format_total">总 @网速</string>
    <string name="speed_format_horizontal">上下行横排</string>
    <string name="speed_format_vertical">上下行竖排</string>
    <string name="text_alignment">文字对齐</string>
    <string name="text_alignment_left">左对齐</string>
    <string name="text_alignment_center">居中</string>
    <string name="text_alignment_right">右对齐</string>
    <string name="text_color">文字颜色</string>
    <string name="text_size">文字大小</string>
    <string name="show_above_status_bar">显示在状态栏上方</string>
    <string name="position_fine_tuning">位置微调</string>
    <string name="move_up">上移</string>
    <string name="move_down">下移</string>
    <string name="move_left">左移</string>
    <string name="move_right">右移</string>
    <string name="settings">设置</string>
    <string name="speed_unit_bps">B/s</string>
    <string name="speed_unit_kbps">KB/s</string>
    <string name="speed_unit_mbps">MB/s</string>
    <string name="speed_unit_gbps">GB/s</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
</resources>
